tests/ui/short_docbox/unknown_field.stderr
error: Unknown field: `invalid`
 --> $DIR/unknown_field.rs:3:16
  |
3 | #[short_docbox(invalid="field")]
  |                ^^^^^^^^^^^^^^^
