tests/ui/short_docbox/unknown_field.rs
use doc_item::short_docbox;

#[short_docbox(invalid="field")]
fn unknown_field() {}

fn main() {}
